src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__exec__a_double_quoted.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(r#\"exec -a \"zsh\" foobar $0\"#)?"
---
exec -a "zsh" foobar $0

0   4   `exec`    precommand.builtin.exec
4   6   ` -`      punctuation.definition.parameter
6   7   `a`       variable.parameter.option
8   9   `"`       punctuation.definition.string.begin
9   12  `zsh`     string.quoted.double
12  13  `"`       punctuation.definition.string.end
14  20  `foobar`  CALLABLE `foobar`
20  21  ` `       meta.function-call.arguments
21  22  `$`       punctuation.definition.variable
22  23  `0`       variable.other.readwrite
