src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__exec__cl.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"exec -cl foobar\")?"
---
exec -cl foobar

0  4   `exec`    precommand.builtin.exec
4  6   ` -`      punctuation.definition.parameter
6  8   `cl`      variable.parameter.option
9  15  `foobar`  CALLABLE `foobar`
