src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__exec__foobar.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"exec foobar\")?"
---
exec foobar

0  4   `exec`    precommand.builtin.exec
5  11  `foobar`  CALLABLE `foobar`
