src/highlighting/snapshots/zsh_patina__highlighting__highlighter__tests__exec__l.snap
---
source: src/highlighting/highlighter.rs
expression: "cfg.highlight(\"exec -l foobar\")?"
---
exec -l foobar

0  4   `exec`    precommand.builtin.exec
4  6   ` -`      punctuation.definition.parameter
6  7   `l`       variable.parameter.option
8  14  `foobar`  CALLABLE `foobar`
